# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
# Pin CMake 3.31 (last 3.x release): scikit-build-core's wheel-build cmake
# invocation otherwise picks whatever's pre-installed (3.26 on manylinux,
# 4.x on macOS Homebrew). 3.26 is too old for boost 1.83 in FindBoost; 4.x
# removes FindBoost entirely (CMP0167) and our deps aren't yet config-mode
# clean. 3.31 has a current FindBoost that knows boost 1.83+ on both
# platforms.
requires = ["scikit-build-core>=0.10", "cmake>=3.31,<4", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "rebalancer"
dynamic = ["version"]
description = "Library for balanced assignment optimization"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Meta Platforms, Inc." }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/facebook/rebalancer"
Repository = "https://github.com/facebook/rebalancer"

[tool.scikit-build]
# Resolve the wheel version from version.txt (single source of truth).
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "version.txt"
metadata.version.regex = "^(?P<value>.+?)\\s*$"

# Where the Python package source lives.
wheel.packages = ["src/rebalancer"]

# Reproducible builds: pin SOURCE_DATE_EPOCH-style timestamps off.
sdist.reproducible = true

# Pass-through cmake settings; we rely on CMakeLists.txt's SKBUILD-guarded
# install(TARGETS rebalancer ...) block to place librebalancer.{so,dylib}
# under rebalancer/_lib/ inside the wheel.
cmake.build-type = "RelWithDebInfo"
